.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:31:45 **** Build of configuration debug for project performance_project ****
make MODE=debug all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/PerformanceEvaluation/omnetpp-6.0.1-windows-x86_64/omnetpp-6.0.1/samples/PECSN-Project/performance_project/src'
Client/Client.cc
Server/Cpu/Cpu.cc
Server/HardDisk/HardDisk.cc
Server/HardDisk/HardDisk.cc:29:6: error: use of undeclared identifier 'Cpu'
void Cpu::handleMessage(cMessage * msg){
     ^
Server/HardDisk/HardDisk.cc:33:6: error: use of undeclared identifier 'Cpu'
void Cpu::finish(){
     ^
2 errors generated.
make[1]: *** [Makefile:107: ../out/clang-debug/src/Server/HardDisk/HardDisk.o] Error 1
make[1]: Leaving directory '/c/PerformanceEvaluation/omnetpp-6.0.1-windows-x86_64/omnetpp-6.0.1/samples/PECSN-Project/performance_project/src'
make: *** [Makefile:2: all] Error 2
"make MODE=debug all" terminated with exit code 2. Build might be incomplete.
18:32:47 **** Incremental Build of configuration debug for project performance_project ****
make MODE=debug all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/PerformanceEvaluation/omnetpp-6.0.1-windows-x86_64/omnetpp-6.0.1/samples/PECSN-Project/performance_project/src'
Server/HardDisk/HardDisk.cc
WebServer/WebServer.cc
Creating executable: ../out/clang-debug/src/performance_project_dbg.exe
make[1]: Leaving directory '/c/PerformanceEvaluation/omnetpp-6.0.1-windows-x86_64/omnetpp-6.0.1/samples/PECSN-Project/performance_project/src'
18:50:40 **** Incremental Build of configuration debug for project performance_project ****
make MODE=debug all 
cd src && /usr/bin/make
make[1]: Entering directory '/c/PerformanceEvaluation/omnetpp-6.0.1-windows-x86_64/omnetpp-6.0.1/samples/PECSN-Project/performance_project/src'
make[1]: Nothing to be done for 'all'.
make[1]: Leaving directory '/c/PerformanceEvaluation/omnetpp-6.0.1-windows-x86_64/omnetpp-6.0.1/samples/PECSN-Project/performance_project/src'
